--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\neham\\AppData\\Local\\Android\\Sdk
-flutter.sdk=C:\\Users\\neham\\flutter
+sdk.dir=D:\\Apps_and_Programs\\Android\\Sdk\\
+flutter.sdk=D:\\dev\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
