--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,10 +39,16 @@ dependencies:
   firebase_core: ^2.24.2
   firebase_storage: ^11.6.0
   cloud_firestore: ^4.14.0
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  image_path: "assets/vendilog.jpg"
+  android: true
+  ios: true     
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
